# webex-status

./: .gitignore  README.md  get-status.py  pyproject.toml
templates/: DoNotDisturb.html  OutOfOffice.html  active.html  call.html  gallery.html  inactive.html  meeting.html  pending.html  presenting.html  unknown.html
